Revision history for Perl module Devel-Leak-Object

1.01 Fri 23 Oct 2009
	- warn rather than die for objects that don't conform to our assumptions
	- list tracked source line only once
	- list the next caller in the stack if bless is called by the class's new()

1.00 Thu 22 Oct 2009
	- Upgrading to Module::Install::DSL 0.91
	- Switching to a prod version (finally)
	- Optionally track where leaked objects come from
	- Fix dumping to STDERR at END (previously dumped to STDOUT)
	- Tests for that

0.92 Tue 11 Dec 2007
	- Updating to Module::Install 0.68
	- Updating to newer bundled tests

0.91 Fri 14 Sep 2007
	- Lexically disable warnings when overwriting DESTROY methods
	- Fixing a test

0.90 Wed 29 Aug 2007
	- MAJOR RELEASE: NOW WITH 38% ALL NEW EVIL!!!
	- Taken over maintenance and rewritten from scratch, using Scalar::Util
	- Now supports all types of objects, including IO and REF
	- Supports classes which overload stringification.
	- Support a couple more evil corner cases relating to SUPER::DESTROY
	- Accelerated and cached the DESTROY-time search for the DESTROY super-method

0.02 Tue Sep 21  2004
	- Remove call to Hook::LexWrap as this is not what is needed in
	this module. Do own wrapping.

0.01 Sat Sep 11  2004
	- Initial version.